--- a/cdk/package.json
+++ b/cdk/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-codepipeline-actions": "^1.66.0",
     "@aws-cdk/aws-ec2": "^1.66.0",
     "@aws-cdk/aws-ecs": "^1.66.0",
+    "@aws-cdk/aws-rds": "^1.66.0",
     "@aws-cdk/aws-ecs-patterns": "^1.66.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.66.0",
     "@aws-cdk/aws-iam": "^1.66.0",
