--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@
 #
 #    pip-compile requirements.in
 #
+-e file:.#egg=lib         # via -r requirements.in
 boto3==1.15.13            # via -r requirements.in
 botocore==1.18.18         # via boto3, s3transfer
 jmespath==0.10.0          # via boto3, botocore
+psycopg2-binary==2.8.6    # via -r requirements.in
 python-dateutil==2.8.1    # via botocore
 s3transfer==0.3.3         # via boto3
 six==1.15.0               # via python-dateutil
