--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ psycopg2-binary==2.8.6    # via -r requirements.in
 python-dateutil==2.8.1    # via botocore
 s3transfer==0.3.3         # via boto3
 six==1.15.0               # via python-dateutil
+sqlalchemy==1.3.20        # via -r requirements.in
 urllib3==1.25.10          # via botocore
