--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ certifi==2020.11.8        # via requests
 chardet==3.0.4            # via requests
 idna==2.10                # via requests
 jmespath==0.10.0          # via boto3, botocore
+numpy==1.19.4             # via pandas
+pandas==1.1.4             # via -r requirements.in
 peewee==3.14.0            # via -r requirements.in
 psycopg2-binary==2.8.6    # via -r requirements.in
-python-dateutil==2.8.1    # via botocore
+python-dateutil==2.8.1    # via botocore, pandas
+pytz==2020.4              # via pandas
 requests==2.25.0          # via -r requirements.in
 s3transfer==0.3.3         # via boto3
 six==1.15.0               # via python-dateutil
