--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ psycopg2-binary==2.8.6    # via -r requirements.in
 python-dateutil==2.8.1    # via botocore, pandas
 pytz==2020.4              # via pandas
 requests==2.25.0          # via -r requirements.in
+retrying==1.3.3           # via -r requirements.in
 s3transfer==0.3.3         # via boto3
-six==1.15.0               # via python-dateutil
+six==1.15.0               # via python-dateutil, retrying
 soupsieve==2.0.1          # via beautifulsoup4
 urllib3==1.25.10          # via botocore, requests
