--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,22 @@
 #    pip-compile requirements.in
 #
 -e file:.#egg=lib         # via -r requirements.in
+beautifulsoup4==4.9.3     # via -r requirements.in
 boto3==1.15.13            # via -r requirements.in
 botocore==1.18.18         # via boto3, s3transfer
+certifi==2020.11.8        # via requests
+chardet==3.0.4            # via requests
+idna==2.10                # via requests
 jmespath==0.10.0          # via boto3, botocore
+numpy==1.19.4             # via pandas
+pandas==1.1.4             # via -r requirements.in
 peewee==3.14.0            # via -r requirements.in
 psycopg2-binary==2.8.6    # via -r requirements.in
-python-dateutil==2.8.1    # via botocore
+python-dateutil==2.8.1    # via botocore, pandas
+pytz==2020.4              # via pandas
+requests==2.25.0          # via -r requirements.in
+retrying==1.3.3           # via -r requirements.in
 s3transfer==0.3.3         # via boto3
-six==1.15.0               # via python-dateutil
-urllib3==1.25.10          # via botocore
+six==1.15.0               # via python-dateutil, retrying
+soupsieve==2.0.1          # via beautifulsoup4
+urllib3==1.25.10          # via botocore, requests
