--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ jmespath==0.10.0          # via boto3, botocore
 joblib==1.0.0             # via scikit-learn
 kiwisolver==1.3.1         # via matplotlib
 matplotlib==3.3.3         # via -r requirements.in
+multiprocessing-logging==0.3.1  # via -r requirements.in
 numpy==1.19.4             # via matplotlib, pandas, scikit-learn, scipy
 packaging==20.8           # via pytest
 pandas==1.1.4             # via -r requirements.in
