[Temp] run on all pushes to test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
 name: run unit tests
 
 on:
+  # push:
+  #   branches: [ 'main' ]
   push:
-    branches: [ 'main' ]
+    branches: [ '*' ]
   pull_request:
     branches: [ '*' ]
 
