--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
 name: run unit tests
 
 on:
-  # push:
-  #   branches: [ 'main' ]
   push:
-    branches: [ '*' ]
+    branches: [ 'main' ]
   pull_request:
     branches: [ '*' ]
 
