--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [flake8]
-max_line_length = 120
-# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
-ignore = E261,E265,E402
-exclude = .git,__pycache__,.env,node_modules,cdk
+ignore = E203, E266, E501, W503, F403, F401
+max-line-length = 122
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
