--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,6 @@
 [flake8]
+# see https://www.flake8rules.com/rules/E203.html and change "E203" for explanation of different rules to ignore
+# these are primarily ignored for compatibility with black
 ignore = E203, E501, W503, F403
 max-line-length = 122
 max-complexity = 18
