--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "article-rec-training-job"
 version = "0.1.0"
 description = "Code to define, run, and orchestrate the LNL article recommendation training job."
-authors = ["LocalNewsLab <markh@columbia.edu>"]
+authors = ["LocalNewsLab <mh3287@columbia.edu>"]
 
 [tool.poetry.dependencies]
 python = "3.8.*"
@@ -14,6 +14,7 @@ pandas = "1.3.4"
 peewee = "3.14.8"
 psycopg2-binary = "2.9.2"
 progressbar2 = "3.55.0"
+pytest = "6.2.5"
 redshift-connector = "2.0.901"
 requests = "2.26.0"
 retrying = "1.3.3"
@@ -24,7 +25,6 @@ scipy = "1.7.3"
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
 pre-commit = "2.19.0"
-pytest = "6.2.5"
 
 [tool.black]
 line-length = 122
