--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Code to define, run, and orchestrate the LNL article recommendati
 authors = ["LocalNewsLab <mh3287@columbia.edu>"]
 
 [tool.poetry.dependencies]
+# if this python version changes, the python base image in the Dockerfile needs to change too
 python = "3.8.*"
 aiobotocore = {version = "2.0.1", extras = ["awscli", "boto3"]}
 beautifulsoup4 = "4.10.0"
