--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [flake8]
-max_line_length = 120
-# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
-ignore = E261,E265,E402
+# see https://www.flake8rules.com/rules/E203.html and change "E203" for explanation of different rules to ignore
+# these are primarily ignored for compatibility with black
+ignore = E203, E501, W503, F403
+max-line-length = 122
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
 exclude = .git,__pycache__,.env,node_modules,cdk
