sys.path edit for scripts so that the backfill scripts work from where they are located, account for pep8 issue in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,6 @@ max-line-length = 122
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
 exclude = .git,__pycache__,.env,node_modules,cdk
+per-file-ignores =
+    project/__init__.py:F401
+    scripts/*.py:E402
