--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,9 @@ scikit-learn = "1.0.1"
 scipy = "1.7.3"
 
 [tool.poetry.dev-dependencies]
-black = "22.3.0"
+mypy = "0.961"
 pre-commit = "2.19.0"
+types-requests = "2.26.0"
 
 [tool.black]
 line-length = 122
