--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,5 @@ max-line-length = 122
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
 exclude = .git,__pycache__,.env,node_modules,cdk
+per-file-ignores =
+    scripts/*.py:E402
