--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ aioitertools==0.10.0; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 asn1crypto==1.5.1; python_version >= "3.6"
 async-timeout==4.0.2; python_version >= "3.6"
-atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
-attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+atomicwrites==1.4.1; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
+attrs==22.1.0; python_version >= "3.6"
 awscli==1.21.8; python_version >= "3.6"
 beautifulsoup4==4.10.0; python_full_version > "3.0.0"
 boto3==1.19.8; python_version >= "3.6"
@@ -15,23 +15,23 @@ charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >=
 colorama==0.4.3; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0"
 cycler==0.11.0; python_version >= "3.7"
 docutils==0.15.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.3.0"
-fonttools==4.33.3; python_version >= "3.7"
-frozenlist==1.3.0; python_version >= "3.7"
+fonttools==4.34.4; python_version >= "3.7"
+frozenlist==1.3.1; python_version >= "3.7"
 fsspec==2021.11.1; python_version >= "3.6"
 h5py==3.6.0; python_version >= "3.7"
-idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+idna==3.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.6"
 jmespath==0.10.0
 joblib==1.1.0; python_version >= "3.7"
-kiwisolver==1.4.3; python_version >= "3.7"
-lxml==4.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+kiwisolver==1.4.4; python_version >= "3.7"
+lxml==4.9.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 matplotlib==3.5.0; python_version >= "3.7"
 multidict==6.0.2; python_version >= "3.7"
 numpy==1.22.4
 packaging==21.3; python_version >= "3.7"
 pandas==1.3.4; python_full_version >= "3.7.1"
 peewee==3.14.8
-pillow==9.1.1; python_version >= "3.7"
+pillow==9.2.0; python_version >= "3.7"
 pluggy==1.0.0; python_version >= "3.6"
 progressbar2==3.55.0
 psycopg2-binary==2.9.2; python_version >= "3.6"
@@ -52,13 +52,13 @@ s3transfer==0.5.2
 scikit-learn==1.0.1; python_version >= "3.7"
 scipy==1.7.3; python_version >= "3.7" and python_version < "3.11"
 scramp==1.4.1; python_version >= "3.6"
-setuptools-scm==7.0.3; python_version >= "3.7"
+setuptools-scm==7.0.5; python_version >= "3.7"
 six==1.16.0
 soupsieve==2.3.2.post1; python_version >= "3.6" and python_full_version > "3.0.0"
 threadpoolctl==3.1.0; python_version >= "3.7"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 tomli==2.0.1; python_version >= "3.7"
-typing-extensions==4.2.0; python_version < "3.10" and python_version >= "3.7"
-urllib3==1.26.9
+typing-extensions==4.3.0; python_version < "3.10" and python_version >= "3.7"
+urllib3==1.26.11
 wrapt==1.14.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-yarl==1.7.2; python_version >= "3.6"
+yarl==1.8.1; python_version >= "3.7"
