got past original error, now brew installed command failed; try to evaluate brew env before running each of these

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           brew tap "aljohri/-" && brew install "AlJohri/-/kar"
 
       - name: Build container
-        run: kar build
+        run: eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)" && kar build
 
       - name: Run tests
-        run: kar test
+        run: eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)" && kar test
