[change] specify urllib3 version; see if this works

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Set up Homebrew
         id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
+        uses: Homebrew/actions/setup-homebrew@master  # Homebrew doesn't use version pinning on this action! Bad!
 
       - name: Install dependencies
         run: brew tap "aljohri/-" && brew install "AlJohri/-/kar"
