--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -11,12 +11,14 @@ jobs:
   typecheck:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         # change this python version if the python version is changed in pyproject.toml and the Dockerfile
         python-version: '3.8'
+    - name: Pin urllib3 version
+      run: pip install urllib3==1.26.9
     - name: Set up Poetry
       uses: abatilo/actions-poetry@v2.0.0
       with:
