--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ s3fs = "2021.11.1"
 scikit-learn = "1.0.1"
 scipy = "1.7.3"
 google-cloud-bigquery = "^3.12.0"
-sqlalchemy = "^2.0.22"
+sqlalchemy = "^1.4.49"
+sqlalchemy-bigquery = "^1.8.0"
 
 [tool.poetry.group.dev.dependencies]
 aws-mfa = "^0.0.12"
