Clean up dependencies (#177)
* Remove Philly Inquirer social params while parsing external IDs (#169)

* [add] remove stuff after '&' from urlpath

* [add] ignore scratch dir

* [change] update workflow action versions

* [change] specify urllib3 version; see if this works

* [change] how about now

* Incrase PI popularity window to 2 days (#170)

* Increase TT default popularity window to 14 days (#171)

* Change TT popularity window back to 7 days (#172)

This reverts commit fd54d5644c46a955ca17873e6e3ca7dc72c3b907.

* Increase TT popularity window (#173)

* Revert TT popularity window increase (#174)

This reverts commit b044a278517240938a6b8df71ccee70e2c68368f.

* Remove AMP code & config from WCP (#175)

* [change] df schema & transformer func to standard GTM

* [remove] amp tests and test data

* [add] aws-mfa as dev dependency & in-project venv

* [change] isort version

* [add] skeleton method and comment for SS

* [change] python to 3.11

* [add] poetry export hook

* [remove] unnecessary files

* [remove] workflows for now

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,28 @@
 # pre-commit, once installed, runs these specified tools to format/lint/check our code for a consistent standard.
 # see https://pre-commit.com/ for more
 repos:
-# isort re-formats import orders to a standard, see https://pycqa.github.io/isort/index.html for more
--   repo: https://github.com/pycqa/isort
-    rev: 5.10.1
+  # isort re-formats import orders to a standard, see https://pycqa.github.io/isort/index.html for more
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
     hooks:
-    - id: isort
-      name: isort (python)
-# black re-formats code to an opinionated standard, see https://black.readthedocs.io/en/stable/index.html for more
--   repo: https://github.com/psf/black
+      - id: isort
+        name: isort (python)
+  # black re-formats code to an opinionated standard, see https://black.readthedocs.io/en/stable/index.html for more
+  - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
-    - id: black
-      language_version: python3.9
-# flake8 checks code to make sure it conforms to pep8 (we specify things to ignore in tox.ini)
-# see https://flake8.pycqa.org/en/latest/ for more
--   repo: https://github.com/pycqa/flake8
+      - id: black
+        language_version: python3.9
+  # flake8 checks code to make sure it conforms to pep8 (we specify things to ignore in tox.ini)
+  # see https://flake8.pycqa.org/en/latest/ for more
+  - repo: https://github.com/pycqa/flake8
     rev: 3.7.9
     hooks:
-    - id: flake8
+      - id: flake8
+  # poetry hooks
+  - repo: https://github.com/python-poetry/poetry-plugin-export
+    rev: 1.6.0
+    hooks:
+      # poetry-export exports the poetry requirements to a requirements.txt file
+      - id: poetry-export
+        args: ["-f", "requirements.txt", "-o", "requirements.txt", "--without-hashes"]
