--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,27 +6,13 @@ authors = ["LocalNewsLab <mh3287@columbia.edu>"]
 
 [tool.poetry.dependencies]
 # if this python version changes, the python base image in the Dockerfile needs to change too
-python = "3.8.*"
-aiobotocore = {version = "2.0.1", extras = ["awscli", "boto3"]}
-beautifulsoup4 = "4.10.0"
-h5py = "3.6.0"
-matplotlib = "3.5.0"
-pandas = "1.3.4"
-peewee = "3.14.8"
-psycopg2-binary = "2.9.2"
-progressbar2 = "3.55.0"
-pytest = "6.2.5"
-redshift-connector = "2.0.901"
-requests = "2.26.0"
-retrying = "1.3.3"
-s3fs = "2021.11.1"
-scikit-learn = "1.0.1"
-scipy = "1.7.3"
+python = "3.11.*"
 
-[tool.poetry.dev-dependencies]
-mypy = "0.961"
-pre-commit = "2.19.0"
-types-requests = "2.26.0"
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.7.1"
+pre-commit = "^3.5.0"
+pytest = "^7.4.3"
+
 
 [tool.black]
 line-length = 122
