--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-
+cachetools==5.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+certifi==2023.11.17 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+charset-normalizer==3.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-api-core==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-api-core[grpc]==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-auth==2.23.4 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-cloud-bigquery==3.13.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-cloud-core==2.3.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-crc32c==1.5.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-resumable-media==2.6.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+googleapis-common-protos==1.61.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+grpcio-status==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
+grpcio==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
+idna==3.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+packaging==23.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+proto-plus==1.22.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+protobuf==4.25.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+pyasn1-modules==0.3.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+pyasn1==0.5.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+python-dateutil==2.8.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+requests==2.31.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+rsa==4.9 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+six==1.16.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+urllib3==2.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
