--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 cachetools==5.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 certifi==2023.11.17 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 charset-normalizer==3.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+colorama==0.4.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and sys_platform == "win32"
 google-api-core==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-api-core[grpc]==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-auth==2.23.4 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
@@ -12,6 +13,7 @@ googleapis-common-protos==1.61.0 ; python_version >= "3.11.dev0" and python_vers
 grpcio-status==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
 grpcio==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
 idna==3.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+loguru==0.7.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 packaging==23.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 proto-plus==1.22.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 protobuf==4.25.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
@@ -22,3 +24,4 @@ requests==2.31.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0
 rsa==4.9 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 six==1.16.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 urllib3==2.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+win32-setctime==1.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and sys_platform == "win32"
