--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,14 @@ authors = ["LocalNewsLab <mh3287@columbia.edu>"]
 python = "3.11.*"
 google-cloud-bigquery = "^3.13.0"
 loguru = "^0.7.2"
+pandas = "^2.1.3"
+db-dtypes = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
 pre-commit = "^3.5.0"
 pytest = "^7.4.3"
+python-dotenv = "^1.0.0"
 
 
 [tool.black]
