--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ google-cloud-bigquery = "^3.13.0"
 loguru = "^0.7.2"
 pandas = "^2.1.3"
 db-dtypes = "^1.1.1"
+pandera = "^0.17.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
