--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,13 @@ loguru = "^0.7.2"
 pandas = "^2.1.3"
 db-dtypes = "^1.1.1"
 pandera = "^0.17.2"
+dacite = "^1.8.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
 pre-commit = "^3.5.0"
 pytest = "^7.4.3"
-python-dotenv = "^1.0.0"
+pyyaml = "^6.0.1"
 
 
 [tool.black]
