--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ cachetools==5.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev
 certifi==2023.11.17 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 charset-normalizer==3.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 colorama==0.4.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and sys_platform == "win32"
+dacite==1.8.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 db-dtypes==1.1.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-api-core==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-api-core[grpc]==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-google-auth==2.23.4 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+google-auth==2.24.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-cloud-bigquery==3.13.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-cloud-core==2.3.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-crc32c==1.5.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
