--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,19 @@ authors = ["LocalNewsLab <mh3287@columbia.edu>"]
 [tool.poetry.dependencies]
 # if this python version changes, the python base image in the Dockerfile needs to change too
 python = "3.11.*"
+google-cloud-bigquery = "^3.13.0"
+loguru = "^0.7.2"
+pandas = "^2.1.3"
+db-dtypes = "^1.1.1"
+pandera = "^0.17.2"
+dacite = "^1.8.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
 pre-commit = "^3.5.0"
 pytest = "^7.4.3"
+pyyaml = "^6.0.1"
+types-pyyaml = "^6.0.12.12"
 
 
 [tool.black]
