--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pandas = "^2.1.3"
 db-dtypes = "^1.1.1"
 pandera = "^0.17.2"
 dacite = "^1.8.1"
+article-rec-db = "0.0.8"
+pydantic = "^2.5.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
