--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-annotated-types==0.6.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+annotated-types==0.6.0 ; python_version >= "3.11.dev0" and python_version < "3.12"
+article-rec-db==0.0.8 ; python_version >= "3.11.dev0" and python_version < "3.12"
 cachetools==5.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 certifi==2023.11.17 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 charset-normalizer==3.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
@@ -13,30 +14,35 @@ google-cloud-core==2.3.3 ; python_version >= "3.11.dev0" and python_version < "3
 google-crc32c==1.5.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-resumable-media==2.6.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 googleapis-common-protos==1.61.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+greenlet==3.0.1 ; python_version >= "3.11.dev0" and python_version < "3.12" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 grpcio-status==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
 grpcio==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
 idna==3.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 loguru==0.7.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 multimethod==1.10 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 mypy-extensions==1.0.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-numpy==1.26.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+numpy==1.26.2 ; python_version >= "3.11.dev0" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 pandas==2.1.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 pandera==0.17.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+pgvector==0.2.4 ; python_version >= "3.11.dev0" and python_version < "3.12"
 proto-plus==1.22.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 protobuf==4.25.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+psycopg2==2.9.9 ; python_version >= "3.11.dev0" and python_version < "3.12"
 pyarrow==14.0.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 pyasn1-modules==0.3.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 pyasn1==0.5.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-pydantic-core==2.14.5 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-pydantic==2.5.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+pydantic-core==2.14.5 ; python_version >= "3.11.dev0" and python_version < "3.12"
+pydantic==2.5.2 ; python_version >= "3.11.dev0" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 pytz==2023.3.post1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 requests==2.31.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 rsa==4.9 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 six==1.16.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+sqlalchemy==2.0.23 ; python_version >= "3.11.dev0" and python_version < "3.12"
+sqlmodel==0.0.14 ; python_version >= "3.11.dev0" and python_version < "3.12"
 typeguard==4.1.5 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-typing-extensions==4.8.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+typing-extensions==4.8.0 ; python_version >= "3.11.dev0" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 tzdata==2023.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 urllib3==2.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
