--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,24 @@ pre-commit = "^3.5.0"
 pytest = "^7.4.3"
 pyyaml = "^6.0.1"
 types-pyyaml = "^6.0.12.12"
+pandas-stubs = "^2.1.1.230928"
 
+[tool.mypy]
+# documentation reference: https://mypy.readthedocs.io/en/stable/config_file.html
+plugins = ["pydantic.mypy"]
+follow_imports = "silent"
+warn_redundant_casts = true
+warn_unused_ignores = true
+disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_reexport = true
+disallow_untyped_defs = true
+files = "app.py"
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
 
 [tool.black]
 line-length = 122
