--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ rsa==4.9 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 six==1.16.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 sqlalchemy==2.0.23 ; python_version >= "3.11.dev0" and python_version < "3.12"
 sqlmodel==0.0.14 ; python_version >= "3.11.dev0" and python_version < "3.12"
+tenacity==8.2.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 typeguard==4.1.5 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 typing-extensions==4.8.0 ; python_version >= "3.11.dev0" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
