--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,12 @@ pytest = "^7.4.3"
 pyyaml = "^6.0.1"
 types-pyyaml = "^6.0.12.12"
 pandas-stubs = "^2.1.1.230928"
+pandera = {extras = ["mypy"], version = "^0.17.2"}
+pydantic = {extras = ["mypy"], version = "^2.5.2"}
 
 [tool.mypy]
 # documentation reference: https://mypy.readthedocs.io/en/stable/config_file.html
-plugins = ["pydantic.mypy"]
-follow_imports = "silent"
+plugins = ["pydantic.mypy", "pandera.mypy"]
 warn_redundant_casts = true
 warn_unused_ignores = true
 disallow_any_generics = true
