--- a/tests/data/bigquery.yaml
+++ b/tests/data/bigquery.yaml
@@ -150,7 +150,7 @@ projects:
                     value:
                       string_value: "https://testpage.com/2023/12/dummy-article/"
                 user_pseudo_id: "123456789.1234567890"
-              - event_timestamp: 1702999440241213
+              - event_timestamp: 1703004440236213
                 event_name: user_engagement
                 event_params:
                   - key: page_location
@@ -159,3 +159,4 @@ projects:
                   - key: engagement_time_msec
                     value:
                       int_value: 5000
+                user_pseudo_id: "123456789.1234567890"
