Add testing for GA4 event fetcher (#184)
* [change] ga4 event fetcher to emit metrics dataframe

* [change] wp page fetcher to emit metrics dataclass

* [add] postgres page writer

* [change] refactor tasks

* [change] docs

* [change] appease mypy

* [add] bigquery dummy data for ga4 fetch test

* [remove] cdk dir

* [add] ga4 df test

* [add] metrics test

* [add] testing instruction

* [add] comment

* [add] project id fixture and comments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pandas-stubs = "^2.1.1.230928"
 pandera = {extras = ["mypy"], version = "^0.17.2"}
 pydantic = {extras = ["mypy"], version = "^2.5.2"}
 types-psycopg2 = "^2.9.21.20"
+poethepoet = "^0.24.4"
 
 [tool.mypy]
 # documentation reference: https://mypy.readthedocs.io/en/stable/config_file.html
@@ -66,3 +67,15 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
+
+[tool.poe.tasks.test-setup]
+help = "Set up the test environment"
+shell = "docker-compose -f tests/compose.yaml up -d"
+
+[tool.poe.tasks.test-teardown]
+help = "Tear down the test environment"
+shell = "docker-compose -f tests/compose.yaml down"
+
+[tool.poe.tasks.test]
+help = "Run the tests, with setup and teardown"
+shell = "poe test-setup && pytest tests; poe test-teardown"
