Add WP page fetcher unit tests (#185)
* [change] ga4 event fetcher to emit metrics dataframe

* [change] wp page fetcher to emit metrics dataclass

* [add] postgres page writer

* [change] refactor tasks

* [change] docs

* [change] appease mypy

* [add] bigquery dummy data for ga4 fetch test

* [remove] cdk dir

* [add] ga4 df test

* [add] metrics test

* [add] testing instruction

* [add] comment

* [add] project id fixture and comments

* [add] page fetcher helper unit tests

* [add] page fetcher helper tests

* [add] notes on integration testing

* [add] notes on integration testing

* [add] compose.yaml, data and conftest.py to integration test dir

* [add] testing to actions

* [change] oops

* [change] oops

--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -25,5 +25,12 @@ jobs:
         run: poetry config virtualenvs.create false && poetry install --no-interaction
       - name: Run mypy
         run: mypy
-      # - name: Run model tests on SQLModel-created mock DB
-        # run: pytest tests
+      - name: Run unit tests
+        run: pytest tests/unit
+      - name: Set up integration testing environment
+        run: docker-compose -f tests/integration/compose.yaml up -d
+      - name: Run integration tests
+        run: pytest tests/integration
+      - name: Tear down integration testing environment
+        if: always()
+        run: docker-compose -f tests/integration/compose.yaml down
