--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ google-cloud-core==2.4.1 ; python_version >= "3.11.dev0" and python_version < "3
 google-crc32c==1.5.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-resumable-media==2.7.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 googleapis-common-protos==1.62.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-greenlet==3.0.2 ; python_version >= "3.11.dev0" and python_version < "3.12" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+greenlet==3.0.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 idna==3.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 loguru==0.7.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 multidict==6.0.4 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
