--- a/tests/unit/config-example.yaml
+++ b/tests/unit/config-example.yaml
@@ -1,27 +1,36 @@
 job_globals:
-  site: site-name # kebab-case
+  site: site-name 
 
 components:
   event_fetchers:
-    - type: ga4_base # Refer to training job config for possible enum values
+    - type: ga4_base 
       params:
         gcp_project_id: gcp-project-id
         site_ga4_property_id: "123456789"
   page_fetchers:
-    - type: wp_base # Refer to training job config for possible enum values
+    - type: wp_base 
       params:
         url_prefix: https://example.com
-        slug_from_path_regex: ^/20\d{2}/(0[1-9]|1[012])/(?P<slug>[a-zA-Z\d\-%]+)/$ # Slug regex must start with ^, end with $, and contain a named group called "slug"
-        language_from_path_regex: # Optional
-          es: ^/es/.*/$ # Language regex must start with ^ and end with $
-        tag_id_republished_content: 42 # Optional
-        request_maximum_attempts: 10 # Optional
-        request_maximum_backoff: 60 # Optional
+        slug_from_path_regex: ^/20\d{2}/(0[1-9]|1[012])/(?P<slug>[a-zA-Z\d\-%]+)/$ 
+        language_from_path_regex: 
+          es: ^/es/.*/$ 
+        tag_id_republished_content: 42 
+        request_maximum_attempts: 10 
+        request_maximum_backoff: 60 
   page_writers:
     - type: postgres_base
       params:
-        env_db_url: POSTGRES_DB_URL # Environment variable name containing the database URL
-        force_update_despite_latest: false # Optional, default false. If true, update pages even if they are already up to date (useful for backfilling post-DB changes)
+        env_db_url: POSTGRES_DB_URL 
+        force_update_despite_latest: false 
+  traffic_based_article_recommenders:
+    - type: popularity
+      params:
+        env_db_url: POSTGRES_DB_URL
+        max_recommendations: 20
+  recommendation_writers:
+    - type: postgres_base
+      params:
+        env_db_url: POSTGRES_DB_URL
 
 tasks:
   - type: update_pages
@@ -30,6 +39,14 @@ tasks:
       page_fetcher: wp_base
       page_writer: postgres_base
     params:
-      date_end: 2023-12-07 # Optional, else use today. YYYY-MM-DD, inclusive
-      days_to_fetch_events: 7 # How many days to fetch in total. Count from date_end backwards
+      date_end: 2023-12-07 
+      days_to_fetch_events: 7 
       days_to_fetch_events_per_batch: 2
+  - type: create_traffic_based_recommendations
+    components:
+      event_fetcher: ga4_base
+      recommender: popularity
+      recommendation_writer: postgres_base
+    params:
+      date_end: 2023-12-07 
+      days_to_fetch_events: 7 
